--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,16 @@
 .idea/
+/aux/
 /public/.htaccess
+/public/aux
 /public/components/**/*
 /vendor/
 autoload.php
-tmp/**/*
 composer.lock
 composer.phar
 config.php
 logs/**/*
 phpunit.xml
+tmp/**/*
 
 !cache/README.md
 !logs/README.md
