--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "mrclay/minify": "2.2.*",
         "slim/slim": "2.*",
         "slim/views": "0.1.*",
-        "twig/twig": "1.*"
+        "twig/twig": "1.*",
+        "pimple/pimple": "~3.0"
     },
     "autoload": {
         "psr-4": { "Trotch\\": "lib/" }
